--- a/app/src/main/res/layout/activity_arout.xml
+++ b/app/src/main/res/layout/activity_arout.xml
@@ -5,6 +5,13 @@
     tools:context=".activity.ARoutActivity"
     tools:ignore="ResourceName">
 
+    <data>
+
+        <variable
+            name="presenter"
+            type="com.smart1010.mvvmdemo.activity.ARoutActivity.Presenter" />
+    </data>
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -15,10 +22,56 @@
             android:layout_height="40dp"
             android:background="@android:color/darker_gray"
             android:gravity="center"
+            android:onClick="@{(view)->presenter.onBusClick(view)}"
             android:text="点击EventBus数据发送"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
+        <androidx.appcompat.widget.AppCompatEditText
+            android:id="@+id/mmkv_edit"
+            android:layout_width="0dp"
+            android:layout_height="100dp"
+            android:layout_marginTop="10dp"
+            android:hint="输入存储到mmkv中"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/test_tv" />
+
+        <TextView
+            android:id="@+id/mmkv_save"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:background="@android:color/darker_gray"
+            android:gravity="center"
+            android:onClick="@{()->presenter.onSaveClick()}"
+            android:text="保存mmkv数据"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/mmkv_edit" />
+
+        <TextView
+            android:id="@+id/mmkv_des"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:layout_marginTop="10dp"
+            android:background="@android:color/darker_gray"
+            android:gravity="center"
+            android:onClick="@{()->presenter.onShowClick()}"
+            android:text="查看mmkv数据"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/mmkv_save" />
+
+
+        <TextView
+            android:id="@+id/mmkv_tv"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:gravity="center"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/mmkv_des" />
 
         <TextView
             android:id="@+id/name_tv"
