--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,6 +23,7 @@
 
 
         <TextView
+            android:id="@+id/arout_tx"
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:background="@android:color/darker_gray"
@@ -32,6 +33,19 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/data_tx"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:layout_marginTop="20dp"
+            android:background="@android:color/darker_gray"
+            android:gravity="center"
+            android:onClick="@{()->presenter.onDataClick()}"
+            android:text="数据"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/arout_tx" />
 
         <TextView
             android:id="@+id/name_tv"
